--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    // Google Material library
+    implementation 'com.google.android.material:material:1.1.0'
+
     def lifecycle_version = "2.2.0"
 
     // ViewModel
