--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+        vectorDrawables.useSupportLibrary true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -55,6 +56,11 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
     // add the Firebase SDK for Google Analytics
-    implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    implementation 'com.google.firebase:firebase-analytics:17.4.2'
+
+    // Maps, places and location
+    implementation 'com.google.android.gms:play-services-maps:17.0.0' // for Maps
+    implementation 'com.google.android.gms:play-services-places:17.0.0' // for Geocoder
+    implementation 'com.google.android.gms:play-services-location:17.0.0' // for FusedLocationProviderClient
 
 }
