--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
         versionCode 1
         versionName "1.0"
         vectorDrawables.useSupportLibrary true
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -42,6 +43,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    // Multidex
+    def multidex_version = "2.0.1"
+    implementation "androidx.multidex:multidex:$multidex_version"
+
     // Google Material library
     implementation 'com.google.android.material:material:1.1.0'
 
@@ -57,6 +62,12 @@ dependencies {
 
     // add the Firebase SDK for Google Analytics
     implementation 'com.google.firebase:firebase-analytics:17.4.2'
+
+    // Firebase Auth
+    implementation 'com.google.firebase:firebase-auth:19.3.1'
+
+    // Firebase Firestore
+    implementation 'com.google.firebase:firebase-firestore:21.4.3'
 
     // Maps, places and location
     implementation 'com.google.android.gms:play-services-maps:17.0.0' // for Maps
