--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,34 @@ dependencies {
     implementation 'com.google.android.gms:play-services-places:17.0.0' // for Geocoder
     implementation 'com.google.android.gms:play-services-location:17.0.0' // for FusedLocationProviderClient
 
+    // Provides ARCore Session and related resources.
+    implementation 'com.google.ar:core:1.17.0'
+
+    // Use the Sceneform UX Package pre-built from Maven.
+    // Provides ArFragment, and other UX resources.
+    implementation "com.google.ar.sceneform.ux:sceneform-ux:1.17.0"
+
 }
+
+
+apply plugin: 'com.google.ar.sceneform.plugin'
+
+sceneform.asset('sampledata/models/frame_lower_left.obj',
+        'default',
+        'sampledata/models/frame_lower_left.sfa',
+        'src/main/assets/models/frame_lower_left')
+
+sceneform.asset('sampledata/models/frame_lower_right.obj',
+        'default',
+        'sampledata/models/frame_lower_right.sfa',
+        'src/main/assets/models/frame_lower_right')
+
+sceneform.asset('sampledata/models/frame_upper_left.obj',
+        'default',
+        'sampledata/models/frame_upper_left.sfa',
+        'src/main/assets/models/frame_upper_left')
+
+sceneform.asset('sampledata/models/frame_upper_right.obj',
+        'default',
+        'sampledata/models/frame_upper_right.sfa',
+        'src/main/assets/models/frame_upper_right')
