--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,21 +44,18 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     // Multidex
-    def multidex_version = "2.0.1"
-    implementation "androidx.multidex:multidex:$multidex_version"
+    implementation 'androidx.multidex:multidex:2.0.1'
 
     // Google Material library
     implementation 'com.google.android.material:material:1.1.0'
 
-    def lifecycle_version = "2.2.0"
-
     // ViewModel
-    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.2.0'
     // LiveData
-    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+    implementation 'androidx.lifecycle:lifecycle-livedata:2.2.0'
     // Annotation processor
     // if using Java8, use the following instead of lifecycle-compiler
-    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
+    implementation 'androidx.lifecycle:lifecycle-common-java8:2.2.0'
 
     // add the Firebase SDK for Google Analytics
     implementation 'com.google.firebase:firebase-analytics:17.4.2'
@@ -75,11 +72,16 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0' // for FusedLocationProviderClient
 
     // Provides ARCore Session and related resources.
-    implementation 'com.google.ar:core:1.17.0'
+    // implementation 'com.google.ar:core:1.17.0'
 
     // Use the Sceneform UX Package pre-built from Maven.
     // Provides ArFragment, and other UX resources.
-    implementation "com.google.ar.sceneform.ux:sceneform-ux:1.17.0"
+    implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.15.0'
+
+    //implementation 'com.google.android.filament:filament-android:1.4.5'
+    // implementation 'com.google.android.filament:gltfio-android:1.4.5'
+
+    //implementation files("libs/libsceneform_runtime_schemas.jar")
 
 }
 
