--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,13 @@ dependencies {
     // Fast Android Networking library
     implementation 'com.amitshekhar.android:android-networking:1.0.2'
 
+    // Graph library
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+}
+
+repositories {
+    maven { url 'https://jitpack.io' }
 }
 
 
