--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,14 @@ dependencies {
     // Fast Android Networking library
     implementation 'com.amitshekhar.android:android-networking:1.0.2'
 
+    // retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
+
+    //OkHttp interceptor
+    implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.2.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
+
     // Graph library
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
